@@ -41,7 +41,6 @@ import java.util.Iterator;
 import java.util.List;
 import java.util.concurrent.atomic.AtomicInteger;
 import java.util.function.Predicate;
-import java.util.stream.Collectors;
 
 /**
  * GordianKnot base for encryptorFactory.
@@ -252,7 +251,7 @@ public abstract class GordianCoreAgreementFactory
                 .stream()
                 .filter(supportedAgreements())
                 .filter(s -> validAgreementSpecForKeyPairSpec(pKeyPairSpec, s))
-                .collect(Collectors.toList());
+                .toList();
     }
 
     /**
