@@ -55,7 +55,6 @@ import java.util.Arrays;
 import java.util.Collections;
 import java.util.List;
 import java.util.function.Predicate;
-import java.util.stream.Collectors;
 
 /**
  * Core Cipher factory.
@@ -372,7 +371,7 @@ public abstract class GordianCoreCipherFactory
         return listAllSymCipherSpecs(pSpec)
                 .stream()
                 .filter(s -> supportedSymCipherSpecs().test(s))
-                .collect(Collectors.toList());
+                .toList();
     }
 
     @Override
@@ -380,14 +379,14 @@ public abstract class GordianCoreCipherFactory
         return listAllSymKeySpecs(pKeyLen)
                 .stream()
                 .filter(supportedSymKeySpecs())
-                .collect(Collectors.toList());
+                .toList();
     }
 
     @Override
     public List<GordianSymKeyType> listAllSupportedSymKeyTypes() {
         return Arrays.stream(GordianSymKeyType.values())
                 .filter(supportedSymKeyTypes())
-                .collect(Collectors.toList());
+                .toList();
     }
 
     @Override
@@ -414,14 +413,14 @@ public abstract class GordianCoreCipherFactory
         return listAllStreamKeySpecs(pKeyLen)
                 .stream()
                 .filter(supportedStreamKeySpecs())
-                .collect(Collectors.toList());
+                .toList();
     }
 
     @Override
     public List<GordianStreamKeyType> listAllSupportedStreamKeyTypes() {
         return Arrays.stream(GordianStreamKeyType.values())
                 .filter(supportedStreamKeyTypes())
-                .collect(Collectors.toList());
+                .toList();
     }
 
     @Override
